crates/uitest/fixtures/ty_check/error_attr_on_non_struct.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/error_attr_on_non_struct.fe
---
error[12-0001]: unsupported `#[error]` attribute on fn `foo`
  ┌─ error_attr_on_non_struct.fe:1:1
  │
1 │ #[error]
  │ ^^^^^^^^ `#[error]` is only supported on structs
